--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       overflow-x: hidden;
     }
 
-    @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap');
 
     * {
       box-sizing: border-box;
@@ -17,7 +17,7 @@
 
     body {
       margin: 0;
-      font-family: 'Comfortaa', cursive, sans-serif;
+      font-family: 'Quicksand', sans-serif;
       background: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
       background-attachment: fixed;
       min-height: 100vh;
@@ -90,7 +90,7 @@
       border: 2px solid #89b362;
       font-size: 16px;
       outline: none;
-      font-family: 'Comfortaa', cursive, sans-serif;
+      font-family: 'Quicksand', sans-serif;
       transition: border-color 0.3s ease;
     }
 
@@ -114,7 +114,7 @@
       border-radius: 20px;
       cursor: pointer;
       box-shadow: 0 4px 8px rgba(74, 127, 35, 0.3);
-      font-family: 'Comfortaa', cursive;
+      font-family: 'Quicksand', sans-serif;
       display: inline-flex;
       align-items: center;
       gap: 6px;
@@ -293,7 +293,7 @@
       font-weight: 700;
       color: white;
       text-align: center;
-      font-family: 'Comfortaa', cursive, sans-serif;
+      font-family: 'Quicksand', sans-serif;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
       z-index: 100000;
       opacity: 0;
@@ -320,7 +320,7 @@
       font-weight: 700;
       color: white;
       text-align: center;
-      font-family: 'Comfortaa', cursive, sans-serif;
+      font-family: 'Quicksand', sans-serif;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
       opacity: 0;
       visibility: hidden;
