--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       overflow-x: hidden;
     }
 
-    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
 
     * {
       box-sizing: border-box;
