--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     body {
       margin: 0;
-      font-family: 'Quicksand', sans-serif;
+      font-family: 'Quicksand';
       background: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
       background-attachment: fixed;
       min-height: 100vh;
@@ -90,7 +90,7 @@
       border: 2px solid #89b362;
       font-size: 16px;
       outline: none;
-      font-family: 'Quicksand', sans-serif;
+      font-family: 'Quicksand';
       transition: border-color 0.3s ease;
     }
 
@@ -114,7 +114,7 @@
       border-radius: 20px;
       cursor: pointer;
       box-shadow: 0 4px 8px rgba(74, 127, 35, 0.3);
-      font-family: 'Quicksand', sans-serif;
+      font-family: 'Quicksand';
       display: inline-flex;
       align-items: center;
       gap: 6px;
@@ -293,7 +293,7 @@
       font-weight: 700;
       color: white;
       text-align: center;
-      font-family: 'Quicksand', sans-serif;
+      font-family: 'Quicksand';
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
       z-index: 100000;
       opacity: 0;
@@ -320,7 +320,7 @@
       font-weight: 700;
       color: white;
       text-align: center;
-      font-family: 'Quicksand', sans-serif;
+      font-family: 'Quicksand';
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
       opacity: 0;
       visibility: hidden;
